# modern-cpp-2024-project

./: .gitignore  CMakeLists.txt  README.md
dataloader/: CMakeLists.txt  dataloader.cpp  dataloader.hpp
viewer/: CMakeLists.txt  viewer.cpp  viewer.hpp
